--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.DriverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Prabhas1A$
+eureka.client.service-url.defaultZone=http://localhost:2222/eureka
