--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ spring.datasource.DriverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Prabhas1A$
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+spring.config.import= optional:configserver:http://localhost:1122
